testsuite/tests/interpreter_errors/constructor_call/abstract_kind_name/test.out
script.lkql:1:22: error: Expect a concrete kind
  1 | val impossible = new BasicDecl(null)
    |                      ^^^^^^^^^
